--- a/themes/jms_molla/assets/scss/base/_type.scss
+++ b/themes/jms_molla/assets/scss/base/_type.scss
@@ -76,7 +76,9 @@ a:focus {
   line-height: 1.875;
   margin-bottom: 1.2rem;
 }
-
+.hidden{
+  display: none !important;
+}
 blockquote {
   position: relative;
   margin: 0 0 4.2rem;
