--- a/themes/jms_molla/assets/scss/style.scss
+++ b/themes/jms_molla/assets/scss/style.scss
@@ -239,3 +239,5 @@
 /*--------------------- 7.Font Icons -------------------- */
 @import 'elements/font-icons';
 
+@import 'plugins/magnific-popup/magnific-popup';
+
