--- a/themes/jms_molla/assets/css/checkout.css
+++ b/themes/jms_molla/assets/css/checkout.css
@@ -82,7 +82,7 @@
     display: flex;
 }
 .custom-checkbox input[type=checkbox] {
-    margin-right: 3px;
+    /*margin-right: 3px;
     display: inline-block;
     width: 16px;
     height: 16px;
@@ -90,7 +90,7 @@
     cursor: pointer;
     position: relative;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.09);
-    text-align: center;
+    text-align: center;*/
 }
 .custom-checkbox label {
     text-align: left;
