--- a/themes/jms_molla/assets/css/product-list.css
+++ b/themes/jms_molla/assets/css/product-list.css
@@ -472,7 +472,7 @@
 .pagination {
     margin: 20px 0 0;
     padding-top: 20px;
-		padding-right:0px;
+	padding-right:0px;
     border-top: 1px solid #ebebeb;
 }
 .pagination ul {
@@ -485,90 +485,234 @@
     margin-left: 15px;
 }
 /***** PRODUCT BOX *****/
-.js-product-miniature .product-info {
-	margin-top:15px;
+.js-product-miniature:hover{
+	box-shadow: 0 5px 20px rgba(0,0,0,0.05);
+	z-index: 10;
 }
-.js-product-miniature .product-title {
-		font-size:17px;
+.js-product-miniature:hover .product-action{
+	visibility: visible;
+	opacity: 1;
+	transform: translateY(0);
+}
+.js-product-miniature .product-info {
+	position: relative;
+	padding: 1.6rem 2rem;
+	padding-bottom: 7rem;
+	transition: all .35s ease;
+	background-color: #fff;
 }
 .js-product-miniature .product-short-desc {
-		display:none;
+	display:none;
 }
 .js-product-miniature .category-name {
-		font-size: 90%;
-		margin-bottom:5px;
+	font-size: 90%;
+	margin-bottom:5px;
 }
 .js-product-miniature .product-preview {
-		position:relative;
+	position:relative;
 }
 .js-product-miniature .product-preview img {
-		width:100%;
+	width:100%;
+	transition: all 400ms;
+	-webkit-transition: all 400ms;
+	-moz-transition: all 400ms;
+	-ms-transition: all 400ms;
+	-o-transition: all 400ms;
 }
-.js-product-miniature:hover .product-preview img {
-		opacity: 0.7;
+.content_price .price.new {
+	font-weight: 400;
+	font-size: 1.6rem;
+	line-height: 1.25;
+	color: #333;
+	margin-bottom: 1.3rem;
 }
-.js-product-miniature:hover .product-preview:before {
-		content: "";
+.content_price .price.new.has-discount{
+	color: #ef837b;
+	margin-right: .3rem;
+}
+.old.price{
+	font-weight: 400;
+	font-size: 1.6rem;
+	line-height: 1.25;
+	color: #ccc;
+	margin-bottom: 1.3rem;
+	opacity: 1;
+	text-decoration: none;
+}
+.btn-add-to-cart{
+	padding: 0 2.8rem;
+}
+.ajax-add-to-cart{
+	display: flex;
+	text-transform: uppercase;
+	color: #333;
+	border: .1rem solid #ebebeb;
+	padding-top: 9px;
+	padding-bottom: 7px;
+	justify-content: center;
+	align-items: center;
+	line-height: 1;
+	transition: all 400ms;
+	-webkit-transition: all 400ms;
+	-moz-transition: all 400ms;
+	-ms-transition: all 400ms;
+	-o-transition: all 400ms;
+}
+.ajax-add-to-cart::before{
+    content: '\e812';
+    font-family: "molla";
+    margin-right: .9rem;
+    font-size: 1.8rem;
+	line-height: 1;
+}
+.addToWishlist{
+    color: #333;
+    font-size: 1.6rem;
+}
+.addToWishlist::before{
+    content: '\f234';
+    font-family: "molla";
+}
+.quick-view{
+    color: #333;
+    font-size: 1.6rem;
+}
+.quick-view::before{
+    content: '\f145';
+    font-family: "molla";
+}
+.product-flags {
+	position: absolute;
+	top:2rem;
+	left:2rem;
+	list-style: none;
+	padding: 0px;
+}
+.product-flags .product-flag {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 4.6rem;
+    height: 4.6rem;
+    min-width: 0;
+    border-radius: 50%;
+    line-height: 1;
+    margin-bottom: 10px;
+}
+.product-flags .product-flag.new{
+    color: #fff;
+    background-color: #a6c76c;
+}
+.product-flags .discount, .product-flags .on-sale {
+    color: #fff;
+    background-color: #ef837b;
+}
+.product-flags .on-sale ~ .discount{
+    display: none;
+}
+.product-flags .online-only, .product-flags .pack {
+    background: #e0e0e0;
+    color: #000;
 }
 /***** Product Box *****/
 .productbox-1 {
-		text-align:center;
+	text-align:center;
 }
-.productbox-1 .variant-links {
-		display: inline-block;
-		text-align: center;
+.productbox-1 .ajax-add-to-cart:hover{
+	color: #fff;
+	border-color: #cc9966;
+	background-color: #cc9966;
 }
 .productbox-1 .content_price {
-		margin-bottom:0.5rem;
-}
-.productbox-1 .product-buttons {
-    display: inline-flex;
-    align-items: stretch;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    padding-left: 7px;
-    padding-right: 7px;
-    max-width: calc(100% - 20px);
-		background: #FFF;
-    box-shadow: 1px 1px 1px rgba(0,0,0,.1);
-    transition: all .3s ease;
+	margin-bottom:0.5rem;
+	margin-top: -1px;
 }
 .productbox-1 .wrapp-buttons {
-    visibility: hidden;
-    text-align: center;
-    transition: opacity .3s ease,visibility .3s ease,-webkit-transform .3s ease;
-    transition: opacity .3s ease,visibility .3s ease,transform .3s ease;
-    transition: opacity .3s ease,visibility .3s ease,transform .3s ease,-webkit-transform .3s ease;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-.productbox-1 .wrapp-buttons {
-    position: absolute;
-    right: 0;
-    bottom: 10px;
-    left: 0;
-}
-.productbox-1 .wrapp-buttons {
-    opacity: 0;
-    -webkit-transform: translateY(25px) translateZ(0);
-    transform: translateY(25px) translateZ(0);
+	opacity: 0;
+	visibility: hidden;
+	position: absolute;
+	right: 3.5rem;
+	top: 2rem;
+	left: auto;
+	display: inline-flex;
+	transition: all 400ms;
+	-webkit-transition: all 400ms;
+	-moz-transition: all 400ms;
+	-ms-transition: all 400ms;
+	-o-transition: all 400ms;
 }
 .productbox-1:hover .wrapp-buttons {
+	right: 2rem;
+    opacity: 1;
     visibility: visible;
 }
-.productbox-1:hover .wrapp-buttons {
-    opacity: 1;
-    -webkit-transform: translateY(0) translateZ(0);
-    transform: translateY(0) translateZ(0);
-}
 .product-buttons .btn-icon {
-    max-width: 43px;
-    width: 100vw;
-    flex: 1 1 auto;
-		padding:5px;
+	position: relative;
+	display: block;
+    font-size: 1.6rem;
+    margin-bottom: 10px;
+    transition: all 400ms;
+	-webkit-transition: all 400ms;
+	-moz-transition: all 400ms;
+	-ms-transition: all 400ms;
+	-o-transition: all 400ms;
+	border-radius: 0 30px 30px 0;
+}
+.product-buttons .btn-icon:hover{
+	background: #c96;
+	color: #fff;
+}
+.product-buttons .btn-icon:hover::before{
+	border-color: #c96;
+}
+.product-buttons .btn-icon span{
+	display: inline-flex;
+	position: absolute;
+	right: 100%;
+	top: 0;
+	bottom: 0;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	display: inline-flex;
+	font-weight: 300;
+	font-size: 11px;
+	white-space: nowrap;
+	letter-spacing: 0;
+	padding-left: 18px;
+	padding-right: 4px;
+	color: #fff;
+	background-color: #c96;
+	-webkit-transition: all .35s ease;
+	-moz-transition: all .35s ease;
+	-ms-transition: all .35s ease;
+	-o-transition: all .35s ease;
+	transition: all .35s ease;
+	opacity: 0;
+	visibility: hidden;
+	border-top-left-radius: 30px;
+	border-bottom-left-radius: 30px;
+	width: auto;
+	height: auto;
+	clip: auto;
+	margin: 0;
+	z-index: 1;
+}
+.product-buttons .btn-icon:hover span{
+	visibility: visible;
+	opacity: 1;
+}
+.product-buttons .btn-icon::before{
+	width: 30px;
+	height: 30px;
+	border: 1px solid #ebebeb;
+	border-radius: 50%;
+	display: block;
+	position: relative;
+	z-index: 10;
 }
 .productbox-1 .btn-icon i {
-		font-size:30px;
+	font-size:30px;
 }
 /***** Product Box 2 *****/
 .productbox-2 .product-info {
@@ -683,7 +827,8 @@
 		margin-bottom:10px;
 }
 .item .js-product-miniature {
-		margin-bottom: 30px;
+	margin-bottom: 0;
+	height: 100%;
 }
 .products-list .js-product-miniature {
     display: -webkit-box;
@@ -706,23 +851,39 @@
     margin-top: -3px;
 }
 .products-list .product-short-desc {
-		display:block;
+	display:block;
+}
+.variant-links{
+	display: flex;
+	justify-content: center;
+	margin-top: 10px;
+}
+.variant-links a:first-child,
+.variant-links a:hover{
+	box-shadow: 0 0 0 0.1rem #cccccc;
 }
 .variant-links a {
-		display: inline-block;
-		width:13px;
-		height:13px;
-		border:1px solid #ddd;
-		border-radius: 50%;
-		float:left;
-		margin:0px 0px 0px 4px;
+	display: block;
+	width: 1.7rem;
+	height: 1.7rem;
+	border-radius: 50%;
+	border: .2rem solid #fff;
+	margin: 0 .25rem;
+	transition: box-shadow .35s ease;
+	background-repeat: no-repeat;
+	background-position: center center;
 }
 .product-img2 {
-		display:none!important;
+	position: absolute;
+	left: 0;
+	top: 0;
+	opacity: 0;
+	width: 100%;
+	height: auto;
 }
 .js-product-miniature:hover .swap-image .product-img2 {
-		display:block!important;
+	opacity: 1;
 }
 .js-product-miniature:hover .swap-image .product-img1 {
-		display:none;
+	opacity: 0;
 }
