--- a/themes/jms_molla/assets/css/style.css
+++ b/themes/jms_molla/assets/css/style.css
@@ -5527,7 +5527,6 @@ p {
 
 .nav.nav-tabs {
   border-bottom-right-radius: .3rem;
-  border: .1rem solid #d7d7d7;
   border-top-width: 0;
   border-right-width: 0;
   border-left-width: 0; }
@@ -5569,10 +5568,8 @@ p {
   .justify-content-center + .tab-content-border {
     border-top-left-radius: .3rem; }
 
-.tab-pane {
-  padding: 1.4rem 2.2rem; }
-  .tab-pane p:last-child {
-    margin-bottom: 0; }
+.tab-pane p:last-child {
+  margin-bottom: 0; }
 
 /* Nav Pills - Line Tabs */
 .nav.nav-pills .nav-link {
@@ -6391,7 +6388,7 @@ p {
   line-height: 1.25;
   letter-spacing: -.01em;
   color: #333333;
-  margin-bottom: .2rem; }
+  margin-bottom: 0; }
 
 .product-title a {
   color: inherit; }
@@ -6557,13 +6554,8 @@ p {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  bottom: 2rem;
+  padding: 0 2.8rem;
   background-color: rgba(255, 255, 255, 0.95);
   z-index: 10;
   -webkit-transition: all .35s ease;
@@ -9254,11 +9246,199 @@ small.form-text {
 /*--------------------- 5.Pages -------------------- */
 /*--------------------- 5.1.Home -------------------- */
 /*  Index.html - Home page */
+#index #wrapper > .row {
+  margin: 0; }
+
+.owl-carousel .owl-nav button {
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
+  .owl-carousel .owl-nav button::before {
+    font-size: 30px;
+    color: #ccc;
+    font-family: "molla";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+    display: inline-block;
+    text-decoration: inherit;
+    text-align: center;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; }
+  .owl-carousel .owl-nav button.disabled {
+    cursor: default; }
+  .owl-carousel .owl-nav button span {
+    display: none; }
+  .owl-carousel .owl-nav button.owl-prev {
+    left: -40px; }
+    .owl-carousel .owl-nav button.owl-prev::before {
+      content: '\f111'; }
+  .owl-carousel .owl-nav button.owl-next {
+    right: -40px; }
+    .owl-carousel .owl-nav button.owl-next::before {
+      content: '\f112'; }
+
+.owl-carousel.owl-drag .owl-item .item {
+  height: 100%; }
+
+.owl-carousel.customs .owl-stage-outer {
+  margin: 0 -20px;
+  padding: 20px; }
+  .owl-carousel.customs .owl-stage-outer .owl-stage {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+
 .gdz-row.no-padding .container-fluid {
   padding: 0; }
 
 .brand-carousel.owl-carousel .owl-item img {
   width: auto; }
+
+.h1-countdown .pb-countdown {
+  margin-bottom: 40px; }
+  .h1-countdown .pb-countdown .countdown-section {
+    position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-color: #a6c76c;
+    color: #fff;
+    border-radius: 3px;
+    min-width: 70px;
+    line-height: 1;
+    padding-top: 2.1rem;
+    padding-bottom: 2.1rem; }
+    .h1-countdown .pb-countdown .countdown-section .countdown-amount {
+      display: inline-block;
+      color: #fff;
+      font-weight: 600;
+      font-size: 3rem;
+      letter-spacing: -.05em;
+      margin-bottom: .4rem; }
+    .h1-countdown .pb-countdown .countdown-section .countdown-period {
+      text-align: center;
+      display: block;
+      font-size: 1.2rem;
+      font-weight: 400;
+      color: #fff;
+      text-transform: lowercase;
+      width: 100%;
+      padding-left: .2rem;
+      padding-right: .2rem;
+      white-space: nowrap;
+      overflow: hidden;
+      -o-text-overflow: ellipsis;
+      text-overflow: ellipsis; }
+    .h1-countdown .pb-countdown .countdown-section:not(:last-child) {
+      margin-right: 20px; }
+      .h1-countdown .pb-countdown .countdown-section:not(:last-child)::after {
+        color: #333333;
+        content: ':';
+        display: inline-block;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 1;
+        position: absolute;
+        left: 100%;
+        margin-left: 9px;
+        margin-top: -1px;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%); }
+
+.h1-countdown .deal-content .btn {
+  font-size: 1.4rem !important;
+  padding-top: 1.15rem;
+  padding-bottom: 1.15rem;
+  font-weight: 500;
+  color: #333;
+  background-color: transparent;
+  border: .1rem solid #ebebeb; }
+  .h1-countdown .deal-content .btn:hover {
+    color: #fff;
+    border-color: #a6c76c;
+    background-color: #a6c76c; }
+
+.h1-countdown .deal-content h4 {
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: -.01em;
+  margin-bottom: .5rem; }
+
+.h1-countdown .deal-content h2 {
+  font-weight: 600;
+  line-height: 1.1;
+  letter-spacing: -.05em;
+  margin-bottom: 3.6rem; }
+
+.h1-countdown .deal-content .product-title {
+  font-size: 2.4rem;
+  font-weight: 600;
+  letter-spacing: -.01em;
+  margin-bottom: .7rem; }
+
+.h1-countdown .deal-content .product-price {
+  font-weight: 300;
+  font-size: 2.4rem;
+  margin-bottom: 2.4rem; }
+  .h1-countdown .deal-content .product-price .new-price {
+    font-weight: 600; }
+
+.h1-countdown .col-banner .pb-banner-text {
+  top: 20px;
+  bottom: auto;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  right: auto;
+  line-height: 1;
+  padding: .8rem 1.4rem; }
+  .h1-countdown .col-banner .pb-banner-text .btn {
+    min-width: auto;
+    background: transparent;
+    border: 1px solid #959595;
+    color: #333; }
+  .h1-countdown .col-banner .pb-banner-text .pb-banner-subtitle {
+    color: #666;
+    margin-bottom: .9rem;
+    font-weight: 400;
+    font-size: 1.4rem;
+    letter-spacing: -.01em;
+    line-height: 1.2; }
+  .h1-countdown .col-banner .pb-banner-text .pb-banner-title {
+    color: #333;
+    font-weight: 600;
+    font-size: 2.4rem;
+    letter-spacing: -.025em;
+    margin-bottom: 1.4rem;
+    line-height: 1.3; }
+  .h1-countdown .col-banner .pb-banner-text .pb-banner-desc {
+    font-size: 2.4rem;
+    line-height: 1.25;
+    letter-spacing: -.01em;
+    margin-bottom: 1.3rem;
+    font-weight: 600;
+    margin-top: -1.4rem; }
 
 .h1-banner .text-white .pb-banner-text .pb-banner-subtitle,
 .h1-banner .text-white .pb-banner-text .pb-banner-title,
@@ -9393,6 +9573,50 @@ small.form-text {
 
 .h1-slider .text-2 {
   letter-spacing: -.025em; }
+
+.h1-producttab .nav.nav-tabs .nav-item {
+  margin: 0 10px; }
+
+.h1-producttab .nav.nav-tabs .nav-link {
+  position: relative;
+  padding: .8rem 1rem;
+  color: #ccc;
+  font-weight: 600;
+  font-size: 2.4rem;
+  letter-spacing: -.025em;
+  text-transform: capitalize; }
+  .h1-producttab .nav.nav-tabs .nav-link:hover {
+    color: #a6c76c; }
+  .h1-producttab .nav.nav-tabs .nav-link.active {
+    color: #333;
+    border-bottom-color: #333; }
+    .h1-producttab .nav.nav-tabs .nav-link.active::before {
+      -webkit-transform-origin: left center;
+      -ms-transform-origin: left center;
+      transform-origin: left center;
+      -webkit-transform: scale(1, 1);
+      -ms-transform: scale(1, 1);
+      transform: scale(1, 1); }
+  .h1-producttab .nav.nav-tabs .nav-link::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: .1rem;
+    background-color: #333;
+    -webkit-transform-origin: right center;
+    -ms-transform-origin: right center;
+    transform-origin: right center;
+    -webkit-transform: scale(0, 1);
+    -ms-transform: scale(0, 1);
+    transform: scale(0, 1);
+    -webkit-transition: -webkit-transform .3s ease;
+    transition: -webkit-transform .3s ease;
+    -o-transition: transform .3s ease;
+    transition: transform .3s ease;
+    transition: transform .3s ease, -webkit-transform .3s ease; }
 
 .intro-section {
   margin-top: -1px; }
