--- a/themes/jms_molla/assets/scss/pages/_home.scss
+++ b/themes/jms_molla/assets/scss/pages/_home.scss
@@ -1,4 +1,64 @@
 /*  Index.html - Home page */
+#index #wrapper > .row{
+	margin: 0;
+}
+.owl-carousel{
+	.owl-nav{
+		button{
+			width: 42px;
+			height: 42px;
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			&::before{
+				font-size: 30px;
+				color: #ccc;
+				font-family: "molla";
+				font-style: normal;
+				font-weight: normal;
+				speak: none;
+				display: inline-block;
+				text-decoration: inherit;
+				text-align: center;
+				font-variant: normal;
+				text-transform: none;
+				line-height: 1;
+				-webkit-font-smoothing: antialiased;
+				-moz-osx-font-smoothing: grayscale;
+			}
+			&.disabled{
+				cursor: default;
+			}
+			span{
+				display: none;
+			}
+			&.owl-prev{
+				left: -40px;
+				&::before{
+					content: '\f111';
+				}
+			}
+			&.owl-next{
+				right: -40px;
+				&::before{
+					content: '\f112';
+				}
+			}
+		}
+	}
+	&.owl-drag .owl-item .item{
+		height: 100%;
+	}
+	&.customs{
+		.owl-stage-outer{
+			margin: 0 -20px;
+			padding: 20px;
+			.owl-stage{
+				display: flex;
+			}
+		}
+	}
+}
 .gdz-row.no-padding{
 	.container-fluid{
 		padding: 0;
@@ -7,6 +67,147 @@
 .brand-carousel{
 	&.owl-carousel .owl-item img{
 		width: auto;
+	}
+}
+.h1-countdown{
+	.pb-countdown{
+		margin-bottom: 40px;
+		.countdown-section{
+			position: relative;
+			display: inline-flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			background-color: $primary-color;
+			color: #fff;
+			border-radius: 3px;
+			min-width: 70px;
+			line-height: 1;
+			padding-top: 2.1rem;
+			padding-bottom: 2.1rem;
+			.countdown-amount {
+			    display: inline-block;
+			    color: #fff;
+			    font-weight: 600;
+			    font-size: 3rem;
+			    letter-spacing: -.05em;
+			    margin-bottom: .4rem;
+			}
+			.countdown-period {
+				text-align: center;
+			    display: block;
+			    font-size: 1.2rem;
+			    font-weight: 400;
+			    color: #fff;
+			    text-transform: lowercase;
+			    width: 100%;
+			    padding-left: .2rem;
+			    padding-right: .2rem;
+			    white-space: nowrap;
+			    overflow: hidden;
+			    text-overflow: ellipsis;
+			}
+			&:not(:last-child){
+				margin-right: 20px;
+				&::after{
+					color: #333333;
+					content: ':';
+					display: inline-block;
+					font-weight: 400;
+					font-size: 20px;
+					line-height: 1;
+					position: absolute;
+					left: 100%;
+					margin-left: 9px;
+					margin-top: -1px;
+					top: 50%;
+					transform: translateY(-50%);
+				}
+			}
+		}
+	}
+	.deal-content{
+		.btn{
+			font-size: 1.4rem !important;
+			padding-top: 1.15rem;
+			padding-bottom: 1.15rem;
+			font-weight: 500;
+			color: #333;
+			background-color: transparent;
+			border: .1rem solid #ebebeb;
+			&:hover{
+				color: #fff;
+				border-color: $primary-color;
+				background-color: $primary-color;
+			}
+		}
+		h4{
+			font-weight: 400;
+			line-height: 1.3;
+			letter-spacing: -.01em;
+			margin-bottom: .5rem;
+		}
+		h2{
+			font-weight: 600;
+			line-height: 1.1;
+			letter-spacing: -.05em;
+			margin-bottom: 3.6rem;
+		}
+		.product-title{
+			font-size: 2.4rem;
+			font-weight: 600;
+			letter-spacing: -.01em;
+			margin-bottom: .7rem;
+		}
+		.product-price {
+			font-weight: 300;
+			font-size: 2.4rem;
+			margin-bottom: 2.4rem;
+			.new-price{
+				font-weight: 600;
+			}
+		}
+	}
+	.col-banner{
+		.pb-banner-text{
+			top: 20px;
+			bottom: auto;
+			left: 50%;
+			transform: translateX(-50%);
+			right: auto;
+			line-height: 1;
+			padding: .8rem 1.4rem;
+			.btn{
+				min-width: auto;
+				background: transparent;
+				border: 1px solid #959595;
+				color: #333;
+			}
+			.pb-banner-subtitle{
+				color: #666;
+				margin-bottom: .9rem;
+				font-weight: 400;
+				font-size: 1.4rem;
+				letter-spacing: -.01em;
+				line-height: 1.2;
+			}
+			.pb-banner-title{
+				color: #333;
+				font-weight: 600;
+				font-size: 2.4rem;
+				letter-spacing: -.025em;
+				margin-bottom: 1.4rem;
+				line-height: 1.3;
+			}
+			.pb-banner-desc{
+				font-size: 2.4rem;
+				line-height: 1.25;
+				letter-spacing: -.01em;
+				margin-bottom: 1.3rem;
+				font-weight: 600;
+				margin-top: -1.4rem;
+			}
+		}
 	}
 }
 .h1-banner{
@@ -127,7 +328,6 @@
 		}
 	}
 }
-
 .h1-slider{
 	.fs-pager-wrapper a{
 		&.active:hover{
@@ -165,6 +365,46 @@
 	}
 	.text-2{
 		letter-spacing: -.025em;
+	}
+}
+.h1-producttab{
+	.nav.nav-tabs{
+		.nav-item{
+			margin: 0 10px;
+		}
+		.nav-link{
+			position: relative;
+			padding: .8rem 1rem;
+			color: #ccc;
+			font-weight: 600;
+			font-size: 2.4rem;
+			letter-spacing: -.025em;
+			text-transform: capitalize;
+			&:hover{
+				color: $primary-color;
+			}
+			&.active{
+				color: #333;
+				border-bottom-color: #333;
+				&::before{
+					transform-origin: left center;
+					transform: scale(1, 1);
+				}
+			}
+			&::before{
+				content: '';
+				display: block;
+				position: absolute;
+				left: 0;
+				bottom: 0;
+				width: 100%;
+				height: .1rem;
+				background-color: #333;
+				transform-origin: right center;
+				transform: scale(0, 1);
+				transition: transform .3s ease;
+			}
+		}
 	}
 }
 
