--- a/themes/jms_molla/modules/gdz_pagebuilder/views/css/base.css
+++ b/themes/jms_molla/modules/gdz_pagebuilder/views/css/base.css
@@ -266,6 +266,7 @@
 .addon-tab .nav.nav-tabs {
     display: inline-block;
     width: 100%;
+    margin-bottom: 1rem;
 }
 .addon-tab .tab-right {
     text-align: right;
@@ -482,10 +483,7 @@
 }
 /***** Carousel Navigation Style *****/
 .owl-nav {
-  width:100%;
-  text-align: center;
-  position: absolute;
-  top:calc(50% - 1rem);
+
 }
 .owl-nav button span {
   font-size:1.5rem;
@@ -522,20 +520,21 @@
 .owl-dots {
   width:100%;
   text-align: center;
-  margin-top:1rem;
+  margin-top: 5px;
 }
 .owl-dots button span {
-  border: 1px solid #dedede;
-  display:inline-block;
-  width:1rem;
-  height:1rem;
-  border-radius: 50%;
+  border: 1px solid #d7d7d7;
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-radius: 30px;
   line-height: 1;
-  margin: 0 0.4rem;
+  margin: 5px 6px;
 }
 .owl-dots button.active span {
-  background:#303030;
-  border: 1px solid #303030;
+  background: #ccc;
+  border: 1px solid #ccc;
+  width: 18px;
 }
 .carousel-pag-swh .owl-dots {
   opacity:0;
