--- a/themes/jms_molla/assets/css/product-list.css
+++ b/themes/jms_molla/assets/css/product-list.css
@@ -485,6 +485,9 @@
     margin-left: 15px;
 }
 /***** PRODUCT BOX *****/
+.js-product-miniature{
+	position: relative;
+}
 .js-product-miniature:hover{
 	box-shadow: 0 5px 20px rgba(0,0,0,0.05);
 	z-index: 10;
@@ -504,10 +507,6 @@
 .js-product-miniature .product-short-desc {
 	display:none;
 }
-.js-product-miniature .category-name {
-	font-size: 90%;
-	margin-bottom:5px;
-}
 .js-product-miniature .product-preview {
 	position:relative;
 }
@@ -518,6 +517,16 @@
 	-moz-transition: all 400ms;
 	-ms-transition: all 400ms;
 	-o-transition: all 400ms;
+}
+.category-name {
+	display: block;
+	margin-bottom: .3rem;
+	color: #777;
+	text-transform: capitalize;
+	font-weight: 300;
+	font-size: 1.3rem;
+	line-height: 1.2;
+	letter-spacing: -.01em;
 }
 .content_price .price.new {
 	font-weight: 400;
@@ -823,12 +832,13 @@
 		opacity: 1;
 }
 .productbox-3 .product-button a {
-		min-width:150px;
-		margin-bottom:10px;
+	min-width:150px;
+	margin-bottom:10px;
 }
 .item .js-product-miniature {
 	margin-bottom: 0;
 	height: 100%;
+	position: relative;
 }
 .products-list .js-product-miniature {
     display: -webkit-box;
