--- a/themes/jms_molla/assets/scss/pages/_home.scss
+++ b/themes/jms_molla/assets/scss/pages/_home.scss
@@ -2,6 +2,28 @@
 #index #wrapper > .row{
 	margin: 0;
 }
+.banner-overlay-light{
+	.pb-banner > a{
+		&:hover::after{
+			opacity: 1;
+			visibility: visible;
+		}
+		&::after{
+			content: '';
+			display: block;
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			bottom: 0;
+			background-color: rgba(255, 255, 255, 0.3);
+			z-index: 1;
+			opacity: 0;
+			visibility: hidden;
+			transition: all 0.4s ease;
+		}
+	}
+}
 .owl-carousel{
 	.owl-nav{
 		button{
@@ -46,9 +68,6 @@
 			}
 		}
 	}
-	&.owl-drag .owl-item .item{
-		height: 100%;
-	}
 	&.customs{
 		.owl-stage-outer{
 			margin: 0 -20px;
@@ -69,7 +88,11 @@
 		width: auto;
 	}
 }
+
 .h1-countdown{
+	.container > .row{
+		margin: 0;
+	}
 	.pb-countdown{
 		margin-bottom: 40px;
 		.countdown-section{
@@ -127,6 +150,8 @@
 		}
 	}
 	.deal-content{
+		padding-top: 5.6rem;
+		padding-left: 5rem;
 		.btn{
 			font-size: 1.4rem !important;
 			padding-top: 1.15rem;
@@ -168,9 +193,14 @@
 			}
 		}
 	}
+	.deal-image{
+		padding-top: 2rem;
+		padding-right: 2rem;
+		padding-left: 0;
+	}
 	.col-banner{
 		.pb-banner-text{
-			top: 20px;
+			top: 37px;
 			bottom: auto;
 			left: 50%;
 			transform: translateX(-50%);
@@ -182,6 +212,13 @@
 				background: transparent;
 				border: 1px solid #959595;
 				color: #333;
+				white-space: nowrap;
+				line-height: 1;
+				&:hover{
+					color: #fff;
+					border-color: $primary-color;
+					background-color: $primary-color;
+				}
 			}
 			.pb-banner-subtitle{
 				color: #666;
@@ -246,26 +283,6 @@
 			.pb-banner-button{
 				margin-top: 14px;
 			}
-		}
-	}
-	.pb-banner > a{
-		&:hover::after{
-			opacity: 1;
-			visibility: visible;
-		}
-		&::after{
-			content: '';
-			display: block;
-			position: absolute;
-			left: 0;
-			right: 0;
-			top: 0;
-			bottom: 0;
-			background-color: rgba(255,255,255,0.3);
-			z-index: 1;
-			opacity: 0;
-			visibility: hidden;
-			transition: all 0.4s ease;
 		}
 	}
 	.pb-banner-text{
@@ -368,6 +385,9 @@
 	}
 }
 .h1-producttab{
+	.owl-drag .owl-item .item{
+		height: 100%;
+	}
 	.nav.nav-tabs{
 		.nav-item{
 			margin: 0 10px;
@@ -405,6 +425,59 @@
 				transition: transform .3s ease;
 			}
 		}
+	}
+	.category-name{
+		display: none;
+	}
+}
+.pb-categorytab{
+	.product-miniature{
+		margin-bottom: 1.5rem;
+	}
+	.nav.nav-tabs{
+		margin-bottom: 3rem;
+		.nav-item{
+			margin: 0;
+			.nav-link{
+				font-size: 1.6rem;
+				text-transform: uppercase;
+				font-weight: 400;
+				padding: .45rem 1.2rem;
+				letter-spacing: -.01em;
+				position: relative;
+				&::before{
+					content: '';
+					display: block;
+					position: absolute;
+					left: 0;
+					bottom: 0;
+					width: 100%;
+					height: .1rem;
+					background-color: #333;
+					transform-origin: right center;
+					transform: scale(0, 1);
+					transition: transform .3s ease;
+				}
+				&.active{
+					color: #333;
+					&::before{
+						transform-origin: left center;
+						transform: scale(1, 1);
+					}
+				}
+			}
+		}
+	}
+}
+
+.pb-blog{
+	text-align: center;
+	.post-title{
+		color: #333;
+		font-weight: 500;
+		font-size: 1.8rem;
+		letter-spacing: -.01em;
+		margin-bottom: .5rem;
 	}
 }
 
@@ -1305,6 +1378,23 @@ button:focus {
 }
 
 @media (min-width: 1200px) {
+	.h1-countdown{
+		.deal-content{
+			flex: 0 0 35.61%;
+			max-width: 35.61%;
+		}
+		.deal-image{
+			flex: 0 0 38.78%;
+			max-width: 38.78%;
+		}
+		.col-banner{
+			flex: 0 0 25.61%;
+			max-width: 25.61%;
+			padding: 0;
+			max-width: 277px;
+			margin-left: auto;
+		}
+	}
 	.h1-banner{
 		.col-lg-5{
 			flex: 0 0 41.18%;
