--- a/themes/jms_molla/assets/scss/elements/_buttons.scss
+++ b/themes/jms_molla/assets/scss/elements/_buttons.scss
@@ -98,7 +98,6 @@
 	padding-top: 1.15rem;
 	padding-bottom: 1.15rem;
 	min-width: 230px;
-	text-transform: uppercase;
 }
 
 .btn-link {
@@ -241,6 +240,7 @@
 }
 
 .btn-outline-darker {
+	font-size: 1.4rem !important;
 	@include button-outline-variant(
 		#333333, #fff, 
 		$primary-color, #d7d7d7, 
