--- a/themes/jms_molla/assets/scss/base/footers/_footer.scss
+++ b/themes/jms_molla/assets/scss/base/footers/_footer.scss
@@ -1,20 +1,54 @@
 /* Footer */
-.footer {
+#footer.footer-1{
+	.html-1{
+		.widget-about-info{
+			margin-top: 4rem;
+			font-weight: 400;
+			font-size: 2rem;
+			letter-spacing: -.01em;
+			line-height: 1.3;
+			a{
+				color: $primary-color;
+			}
+		}
+		.widget-about-title {
+			display: block;
+			font-weight: 300;
+			font-size: 1.3rem;
+			color: #333333;
+			letter-spacing: 0;
+			margin-bottom: .4rem;
+		}
+		.footer-payments{
+			margin-top: .6rem;
+		}
+	}
+	.social-icon{
+		width: auto;
+		height: auto;
+		border: none;
+	}
+}
+#footer {
 	width: 100%;
 	font-weight: 300;
 	font-size: 1.4rem;
 	color: #777;
 	background-color: #fff;
 
-	a {
-		color: inherit;
-	}
-
 	a:hover,
 	a:focus {
 		color: $primary-color;
 	}
 
+	.social-links {
+		display: inline-block;
+		margin: 0px;
+	}
+	.social-links li {
+		display: inline-block;
+		margin-left: 16px;
+	}
 	.widget {
 		margin-bottom: 4rem;
 	}
@@ -27,18 +61,65 @@
 		margin-top: 0;
 		margin-bottom: 1.9rem;
 	}
+	.block-content{
+		ul{
+			li{
+				&:not(:last-child){
+					margin-bottom: .4rem;
+				}
+			}
+		}
+	}
 }
 
-.footer-middle {
-	padding: 6.7rem 0 2.2rem;
-	border-top: .1rem solid #ebebeb;
+#footer-copyright{
+	p{
+		margin-bottom: 0;
+	}
+	.cms-page-link{
+		box-shadow: 0 1px 0 #b5b5b5;
+		margin-left: .2rem;
+		margin-right: 1.5rem;
+		position: relative;
+		&:first-child::after{
+			content: '';
+			display: inline-block;
+			width: 1px;
+			height: 1.2rem;
+			position: absolute;
+			right: -1.1rem;
+			top: 50%;
+			margin-top: -.6rem;
+			background-color: #b5b5b5;
+		}
+	}
+	.container{
+		padding-top: 2.2rem;
+		padding-bottom: 2.2rem;
+		position: relative;
+		&::before{
+			content: '';
+			display: block;
+			height: 1px;
+			position: absolute;
+			top: 0;
+			left: 10px;
+			right: 10px;
+			background-color: #ebebeb;
+		}
+	}
 }
 
-.footer-logo {
-	margin-bottom: 2rem;
-	margin-top: -.8rem;
+.footer-main{
+	padding: 3.9rem 0 1.6rem;
 }
-
+.cms-page-link,
+.custom-page-link{
+	color: #777;
+}
+.logo-footer{
+	margin-bottom: 1.9rem;
+}
 .widget-about p {
 	max-width: 250px;
 
