--- a/themes/jms_molla/assets/scss/pages/_home.scss
+++ b/themes/jms_molla/assets/scss/pages/_home.scss
@@ -2,6 +2,9 @@
 #index #wrapper > .row{
 	margin: 0;
 }
+.pb-divider-separator{
+	display: block;
+}
 .banner-overlay-light{
 	.pb-banner > a{
 		&:hover::after{
@@ -153,18 +156,8 @@
 		padding-top: 5.6rem;
 		padding-left: 5rem;
 		.btn{
-			font-size: 1.4rem !important;
 			padding-top: 1.15rem;
 			padding-bottom: 1.15rem;
-			font-weight: 500;
-			color: #333;
-			background-color: transparent;
-			border: .1rem solid #ebebeb;
-			&:hover{
-				color: #fff;
-				border-color: $primary-color;
-				background-color: $primary-color;
-			}
 		}
 		h4{
 			font-weight: 400;
@@ -467,17 +460,6 @@
 				}
 			}
 		}
-	}
-}
-
-.pb-blog{
-	text-align: center;
-	.post-title{
-		color: #333;
-		font-weight: 500;
-		font-size: 1.8rem;
-		letter-spacing: -.01em;
-		margin-bottom: .5rem;
 	}
 }
 
@@ -1083,10 +1065,24 @@ button:focus {
 	background: #222;
 	opacity: .6;
 }
-
+.newsletter-desc{
+	letter-spacing: -.01em;
+	span{
+		color: #fff;
+		font-weight: 400;
+	}
+}
+.newsletter-button.btn-popup{
+	display: none;
+}
 .newsletter-popup-container {
 	position: relative;
-
+	.btn-submit{
+		display: none;
+	}
+	.newsletter-button.btn-popup{
+		display: block;
+	}
 	.newsletter-img {
 		width: 100%;
 		height: 100%;
@@ -1216,6 +1212,40 @@ button:focus {
 	}
 }
 
+.ajax-add-to-cart:hover{
+	color: #fff;
+	border-color: $primary-color;
+	background-color: $primary-color;
+}
+
+/*** newsletter ***/
+.email_subscription{
+	max-width: 574px;
+	margin: auto;
+	.form-control{
+		padding: 1.25rem 2rem;
+		height: 46px;
+		border: none;
+		background-color: #fff;
+		&::placeholder{
+			color: #999;
+		}
+	}
+}
+#newsletter-btn{
+	background-color: #fff;
+	color: #333;
+	font-weight: 500;
+	min-width: 150px;
+	padding-left: 1rem;
+	padding-right: 0;
+	border: none;
+	line-height: 1;
+	&:hover{
+		color: #fff;
+		background-color: $primary-color;
+	}
+}
 
 @media screen and (min-width: 1200px) {
 	.quickView-content >.row .product-fullscreen {
