--- a/themes/jms_molla/modules/gdz_pagebuilder/views/css/base.css
+++ b/themes/jms_molla/modules/gdz_pagebuilder/views/css/base.css
@@ -24,6 +24,9 @@
         display:none;
     }
 }
+.position-static{
+  position: static;
+}
 .middle-align .row,
 .top-align .row,
 .bottom-align .row {
