--- a/themes/jms_molla/assets/scss/base/headers/_vertical-menu.scss
+++ b/themes/jms_molla/assets/scss/base/headers/_vertical-menu.scss
@@ -472,7 +472,7 @@
 	.vermenu-btn{
 		color: #333;
 		font-weight: 500;
-		padding: 15.5px 15px;
+		padding: 16.5px 15px 14.5px;
 		width: 100%;
 		letter-spacing: -.01em;
 		line-height: 1.5;
