--- a/themes/jms_molla/assets/css/style.css
+++ b/themes/jms_molla/assets/css/style.css
@@ -536,6 +536,9 @@ footer .row, header .row {
     left: auto;
     right: 0; }
 
+.header-menu ul a {
+  line-height: 1.5; }
+
 .header {
   width: 100%;
   background-color: #fff; }
@@ -732,7 +735,6 @@ footer .row, header .row {
   margin-left: 2.5rem; }
 
 .header-middle {
-  padding: 17px 0;
   border-bottom: .1rem solid #f4f4f4; }
   .header-middle .row {
     margin: 0; }
@@ -744,7 +746,9 @@ footer .row, header .row {
   .header-middle .header-right .row {
     padding-top: 1px; }
     .header-middle .header-right .row > div {
-      padding-right: 0; }
+      padding-right: 0;
+      padding-top: 18px;
+      padding-bottom: 19.5px; }
   .header-middle .menu > li > a {
     letter-spacing: .01em; }
   .header-middle .menu.sf-arrows > li > .sf-with-ul {
@@ -1468,19 +1472,20 @@ footer .row, header .row {
     color: #777; }
 
 .header-intro-clearance #cart_block {
-  padding-bottom: 3px; }
-  .header-intro-clearance #cart_block a {
+  position: relative;
+  bottom: 1px; }
+  .header-intro-clearance #cart_block > a {
     font-size: 3.2rem;
     color: #333;
     line-height: 1; }
-    .header-intro-clearance #cart_block a:hover {
+    .header-intro-clearance #cart_block > a:hover {
       color: #a6c76c; }
-    .header-intro-clearance #cart_block a i {
+    .header-intro-clearance #cart_block > a i {
       margin-bottom: 2px; }
-    .header-intro-clearance #cart_block a span {
+    .header-intro-clearance #cart_block > a span {
       font-size: 1.1rem;
       color: #777; }
-    .header-intro-clearance #cart_block a .ajax_cart_quantity {
+    .header-intro-clearance #cart_block > a .ajax_cart_quantity {
       min-width: 1.6rem;
       height: 1.6rem;
       top: 3px;
@@ -1529,6 +1534,89 @@ footer .row, header .row {
   padding-left: 3rem; }
   .header-intro-clearance .blockcart .dropdown-toggle, .header-intro-clearance .wishlist .dropdown-toggle, .header-intro-clearance .account .dropdown-toggle {
     color: #333; }
+
+#cart_block:hover .dropdown-menu {
+  display: block; }
+
+#cart_block .dropdown-menu {
+  display: none;
+  top: 100%;
+  width: 300px;
+  right: -1px;
+  font-size: 1.3rem;
+  z-index: 1001;
+  border: none;
+  margin: 1px 0 0;
+  margin-top: 0;
+  padding: 1.2rem 3rem 2.5rem;
+  border-radius: 0;
+  border: none;
+  -webkit-box-shadow: 5px 10px 16px rgba(51, 51, 51, 0.05), -5px 10px 16px rgba(51, 51, 51, 0.05);
+  box-shadow: 5px 10px 16px rgba(51, 51, 51, 0.05), -5px 10px 16px rgba(51, 51, 51, 0.05);
+  background-color: #fff;
+  -webkit-transition: all .25s;
+  -o-transition: all .25s;
+  transition: all .25s;
+  -webkit-animation-duration: 0.25s;
+  animation-duration: 0.25s;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  -webkit-animation-timing-function: ease;
+  animation-timing-function: ease; }
+  #cart_block .dropdown-menu.show {
+    display: block; }
+
+#cart_block .cart-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+  #cart_block .cart-button .btn {
+    font-size: 1.3rem;
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    min-width: 110px; }
+    #cart_block .cart-button .btn i {
+      margin-right: 0; }
+
+.cart_block_list li {
+  padding: 16px 0;
+  border-bottom: 1px solid #ebebeb; }
+
+.remove-from-cart {
+  color: #ccc; }
+  .remove-from-cart:hover {
+    color: #333; }
+
+.billing-info {
+  padding-top: 10px;
+  padding-bottom: 15px; }
+  .billing-info .cart-prices-line {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .billing-info .cart-prices-line .label {
+      font-size: 1.4rem;
+      font-weight: 400;
+      text-transform: uppercase;
+      color: #666;
+      display: inline-block;
+      padding: 0; }
+    .billing-info .cart-prices-line .value {
+      font-size: 1.5rem;
+      font-weight: 400;
+      color: #666;
+      display: inline-block;
+      margin-left: auto; }
+
+.product-link-cart {
+  display: inline-block;
+  color: #666;
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: -.01em; }
 
 @media screen and (min-width: 992px) {
   .mobile-menu-toggler {
@@ -1726,7 +1814,7 @@ footer .row, header .row {
     .header-1 .header-middle .container::after {
       position: absolute;
       content: '';
-      bottom: -1.8rem;
+      bottom: -.1rem;
       left: 1rem;
       right: 1rem;
       height: .1rem;
@@ -2498,7 +2586,7 @@ footer .row, header .row {
   .vermenu .vermenu-btn {
     color: #333;
     font-weight: 500;
-    padding: 16.5px 15px 14.5px;
+    padding: 15.5px 15px;
     width: 100%;
     letter-spacing: -.01em;
     line-height: 1.5;
