--- a/themes/jms_molla/assets/scss/base/headers/_header.scss
+++ b/themes/jms_molla/assets/scss/base/headers/_header.scss
@@ -22,6 +22,9 @@ footer .row, header .row{
 		}
 	}
 }
+.header-menu ul a{
+	line-height: 1.5;
+}
 .header {
 	width: 100%;
 	background-color: #fff;
@@ -268,7 +271,6 @@ footer .row, header .row{
 }
 
 .header-middle {
-	padding: 17px 0;
 	border-bottom: .1rem solid #f4f4f4;
 	.row{
 		margin: 0;
@@ -284,6 +286,8 @@ footer .row, header .row{
 		padding-top: 1px;
 		> div{
 			padding-right: 0;
+			padding-top: 18px;
+			padding-bottom: 19.5px;
 		}
 	}
 	.menu > li > a {
@@ -1082,8 +1086,9 @@ footer .row, header .row{
 		}
 	}
 	#cart_block{
-		padding-bottom: 3px;
-		a{
+		position: relative;
+		bottom: 1px;
+		> a{
 			font-size: 3.2rem;
 			color: #333;
 			line-height: 1;
@@ -1149,6 +1154,89 @@ footer .row, header .row{
 			color: #333;
 		}
 	}
+}
+
+#cart_block{
+	&:hover{
+		.dropdown-menu{
+			display: block;
+		}
+	}
+	.dropdown-menu{
+		display: none;
+		top: 100%;
+		width: 300px;
+		right: -1px;
+		font-size: 1.3rem;
+		z-index: 1001;
+		border: none;
+		margin: 1px 0 0;
+		margin-top: 0;
+		padding: 1.2rem 3rem 2.5rem;
+		border-radius: 0;
+		border: none;
+		box-shadow: 5px 10px 16px rgba(51,51,51,0.05),-5px 10px 16px rgba(51,51,51,0.05);
+		background-color: #fff;
+		transition: all .25s;
+		animation-duration: 0.25s;
+		animation-name: fadeIn;
+		animation-timing-function: ease;
+		&.show{
+			display: block;
+		}
+	}
+	.cart-button{
+		display: flex;
+		justify-content: space-between;
+		.btn{
+			font-size: 1.3rem;
+			padding-top: .75rem;
+			padding-bottom: .75rem;
+			min-width: 110px;
+			i{
+				margin-right: 0;
+			}
+		}
+	}
+}
+.cart_block_list li{
+	padding: 16px 0;
+	border-bottom: 1px solid #ebebeb;
+}
+.remove-from-cart{
+	color: #ccc;
+	&:hover{
+		color: #333;
+	}
+}
+.billing-info{
+	padding-top: 10px;
+	padding-bottom: 15px;
+	.cart-prices-line{
+		display: flex;
+		.label{
+			font-size: 1.4rem;
+			font-weight: 400;
+			text-transform: uppercase;
+			color: #666;
+			display: inline-block;
+			padding: 0;
+		}
+		.value{
+			font-size: 1.5rem;
+			font-weight: 400;
+			color: #666;
+			display: inline-block;
+			margin-left: auto;
+		}
+	}
+}
+.product-link-cart{
+	display: inline-block;
+	color: #666;
+	font-weight: 400;
+	line-height: 1.3;
+	letter-spacing: -.01em;
 }
 
 @include mq('md') {
@@ -1410,7 +1498,7 @@ footer .row, header .row{
 	    	&::after {
 			    position: absolute;
 			    content: '';
-			    bottom: -1.8rem;
+			    bottom: -.1rem;
 			    left: 1rem;
 			    right: 1rem;
 			    height: .1rem;
